--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
 	<string name="hello">Hello World, MessageActivity!</string>
-	<string name="app_name">SpeechBubble</string>
+	<string name="app_name">team68</string>
 	<string name="main_empty_list">There is no recent conversation, write new message
 		to start one.</string>
 
