--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,12 @@
 
 	<string name="hello">Hello World, MessageActivity!</string>
 	<string name="app_name">team68</string>
+	<string name="hint">Nhập câu hỏi</string>
+	<string name="send">Gửi</string>
+	<string name="speak">voice</string>
+	<string name="reload">Thử lại</string>
+	<string name="start">Bắt đầu</string>
+	<string name="online_text">Robot đã online \n Nhấn bắt đầu để nói chuyện</string>
 	<string name="main_empty_list">There is no recent conversation, write new message
 		to start one.</string>
 
